[package]
name = "micro_message_r"
version = "0.1.0"
authors = ["Spencer Denton <spencerdent02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9"
lettre_email = "0.9"
imap = "2"
native-tls = "0.2"
anyhow = "1.0"
serial = "0.4"

[profile.release]
debug=true
